@@ -40,6 +40,7 @@ export(LzCOPpermsym)
 export(M)
 export(Mshuf)
 export(N4212cop)
+export(ORDSUMcop)
 export(P)
 export(PARETOcop)
 export(PAcop)
